# monarchs

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
monarchs/: Cargo.toml
monarchs-descent/: Cargo.toml
monarchs-descent/assets/maps/: basic_surface.glb
monarchs-descent/src/: lib.rs  ui_camera.rs
monarchs-descent/src/editor/: input.rs  mod.rs  toggle_ui.rs
monarchs-descent/src/gameplay/: input.rs  mod.rs  settings.rs
monarchs-descent/src/gameplay/items/: inventory.rs  mod.rs
monarchs-descent/src/gameplay/player/: camera.rs  controller.rs  crosshair.rs  interact.rs  interaction.rs  inventory.rs  mod.rs
monarchs/assets/meshes/: donut.glb
monarchs/assets/shaders/: block.wgsl
monarchs/src/: config.rs  lib.rs  main.rs  start_menu.rs
monarchs/src/controllers/: mod.rs  player.rs
monarchs/src/core/: collision.rs  cubic.rs  mod.rs  physics.rs  solver.rs
monarchs/src/core/world/: blocks.rs  mod.rs
monarchs/src/database/: files.rs  mod.rs  saves.rs
monarchs/src/debug/: mod.rs
monarchs/src/debug_tools/: mod.rs
monarchs/src/environment/: mod.rs
monarchs/src/gameplay/: mod.rs  state.rs  ui.rs
monarchs/src/gameplay/player/: camera.rs  mod.rs
monarchs/src/gameplay/void/: mod.rs  soul.rs
monarchs/src/gameplay/worlds/: mod.rs
monarchs/src/screens/: loading.rs  main_menu.rs  mod.rs
monarchs/src/ui/: mod.rs  vessel.rs  vessel_switch.rs
monarchs/src/views/: mod.rs  player_camera.rs
monarchs/src/views/graphics/: mod.rs  render_blocks.rs
monarchs/src/void_born/: mod.rs  souls.rs  vessels.rs
monarchs/src/world/: mod.rs
(+30 files in other folders)
