[package]
name = "monarchs-descent"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["bevy_dev_tools"] }

bevy_framepace = "0.19"
bevy_egui = "0.34"
bevy-inspector-egui = "0.31"

avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }

bevy_enhanced_input = "0.11"


[[bin]]
name = "client"
path = "src/bin/client.rs"
