[package]
name = "monarchs"
authors = ["Chris Graham <ChrisGraham908@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["wayland", "dynamic_linking"] }
bevy_framepace = "0.18"
bevy_egui = { version = "0.33" }
bevy_obj = "0.15"

egui_extras = "0.31"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
